--- a/package.json
+++ b/package.json
@@ -1,39 +1,45 @@
 {
-  "name": "node-foursquare",
-  "description": "Fault-tolerant Foursquare API v2 wrapper for Node JS.",
-  "version": "0.0.2",
-  "main": "index.js",
-  "keywords": [
-    "node-foursquare",
-    "foursquare",
-    "4sq"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/clintandrewhall/node-foursquare.git"
-  },
-  "bugs": {
-    "url": "https://github.com/clintandrewhall/node-foursquare/issues"
-  },
-  "licenses": [
+    "name": "node-foursquare-venues",
+    "description": "Fault-tolerant Foursquare Venues API v2 wrapper for Node JS. No user Authentication required. Does not support full 4sq api",
+    "version": "0.0.2",
+    "main": "index.js",
+    "keywords": [
+    "node-foursquare"
+    , "foursquare"
+    , "4sq"
+    , "venues"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/simb/node-foursquare.git"
+    },
+    "bugs": {
+        "url": "https://github.com/simb/node-foursquare/issues"
+    },
+    "licenses": [
     {
-      "type": "MIT",
-      "url": "http://github.com/clintandrewhall/node-foursquare/raw/master/LICENSE"
+        "type": "MIT",
+        "url": "http://github.com/simb/node-foursquare/raw/master/LICENSE"
     }
-  ],
-  "dependencies": {
-    "log4js": "~0.2"
-  },
-  "engines": {
-    "node": "~0.4"
-  },
-  "homepage": "https://github.com/clintandrewhall/node-foursquare",
-  "author": "Clint Andrew Hall (http://www.clintandrewhall.com)",
-  "directories": {
-    "lib": "./lib",
-    "doc": "./doc"
-  },
-  "scripts": {
-    "test": "node test.js"
-  }
+    ],
+    "dependencies": {
+        "log4js": "~0.2"
+    },
+    "engines": {
+        "node": "~0.4"
+    },
+    "homepage": "https://github.com/simb/node-foursquare",
+    "author": "Clint Andrew Hall (http://www.clintandrewhall.com)",
+    "contributors": [
+    {
+        "name": "Simeon Bateman",
+        "email": "simeon@simb.net"
+    }],
+    "directories": {
+        "lib": "./lib",
+        "doc": "./doc"
+    },
+    "scripts": {
+        "test": "node test.js"
+    }
 }
